# MA4529

./: DEVELOPMENT.md  README.md  SPY Delta Hedging.md  mkdocs.yml  pyproject.toml  shell.nix
config/mkdocs/overrides/: home.html
data/: A_analytic_1d.csv  A_analytic_20d.csv  A_analytic_5d.csv  B_mc_500.csv  B_mc_5000.csv  SPY_options_2026-06-30.csv  spy_historical_optdata_bloomberg.csv
docs/: Black-Scholes PDE.md  Ito's Lemma.md  Monte Carlo Option Pricing.md  index.md
docs/aurum/: kernel-internals.md  overview.md  program.md  restful-api.md
docs/aurum/data/: cache.md  topics.md
docs/aurum/orders/: lifecycle.md  risk.md
docs/aurum/portfolio/: account.md  position.md
docs/finance/Option Pricing/: Black-Scholes PDE.md  Ito's Lemma.md  Monte Carlo Option Pricing.md
docs/loom/: clocks.md  modules.md  overview.md  pipeline.md  plugins.md  transforms.md  tutorial.md
docs/lyra/: Commands.md  overview.md  websocket-api.md
docs/strategy/: Queue Aware Market Maker.md  多因子动量模型.md
docs/strategy/Delta Hedging/: SPY Delta Hedging.md
prism/: index.html  package.json  pnpm-lock.yaml
prism/public/data/: A_analytic_1d.csv  A_analytic_20d.csv  A_analytic_5d.csv  B_mc_500.csv  B_mc_5000.csv  spy_delta_hedging_log.csv
prism/src/: global.css  main.tsx
prism/src/theme/: tailwind.theme.css
spy_delta_hedging/: CMakeLists.txt  main.cpp
spy_delta_hedging/strategies/: analytic_delta_hedge.hpp  bs_functions.hpp  mc_delta_hedge.hpp  schema.hpp
src/: black_scholes.py  download_data.py  download_options.py  get_data.py  main.py  portfolio.py
(+71 files in other folders)
